--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
@@ -86,7 +86,7 @@
         settings.Columns.Add(column =>
         {
             column.FieldName = "od_total_fob";
-            column.Caption = "Valor FOB";
+            column.Caption = "Total";
             column.Width = Unit.Percentage(15);
 
         });
